// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Radio Disabled not selected Radio 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  color: #8833FF;
  border: 0;
  opacity: 0.5;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-3 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-5 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.75rem #c3cddf;
  position: absolute;
}

.emotion-6 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.emotion-10 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem #c3cddf;
  position: absolute;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-3"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          className="emotion-4"
        >
          <span
            className="emotion-5"
          />
          <span
            className="emotion-6"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-3"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          className="emotion-4"
        >
          <span
            className="emotion-10"
          />
          <span
            className="emotion-6"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Disabled selected Radio 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  color: #8833FF;
  border: 0;
  opacity: 0.5;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-3 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem currentColor,inset 0px 0px 0px 0.25rem #fefefe,inset 0px 0px 0px 0.75rem currentColor;
  position: absolute;
}

.emotion-5 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <span
    className="emotion-1"
    data-testid="radio-input"
  >
    <input
      checked={true}
      className="emotion-2"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      required={false}
      type="radio"
      value="on"
    />
    <span
      className="emotion-3"
    >
      <span
        className="emotion-4"
      />
      <span
        className="emotion-5"
      />
    </span>
  </span>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio  (\`checked === undefined\`) 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  color: #8833FF;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-3 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-5 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.75rem #b7c3d8;
  position: absolute;
}

.emotion-6 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.emotion-10 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  position: absolute;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          className="emotion-4"
        >
          <span
            className="emotion-5"
          />
          <span
            className="emotion-6"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          className="emotion-4"
        >
          <span
            className="emotion-10"
          />
          <span
            className="emotion-6"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio (\`checked === false\`) 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  color: #8833FF;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-3 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-5 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.75rem #b7c3d8;
  position: absolute;
}

.emotion-6 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.emotion-10 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  position: absolute;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          className="emotion-4"
        >
          <span
            className="emotion-5"
          />
          <span
            className="emotion-6"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-3"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="on"
        />
        <span
          className="emotion-4"
        >
          <span
            className="emotion-10"
          />
          <span
            className="emotion-6"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Radio Playground 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  color: #8833FF;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-3 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem currentColor,inset 0px 0px 0px 0.25rem #fefefe,inset 0px 0px 0px 0.75rem currentColor;
  position: absolute;
}

.emotion-5 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <span
    className="emotion-1"
    data-testid="radio-input"
  >
    <input
      checked={true}
      className="emotion-2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      required={false}
      type="radio"
      value="on"
    />
    <span
      className="emotion-3"
    >
      <span
        className="emotion-4"
      />
      <span
        className="emotion-5"
      />
    </span>
  </span>
</div>
`;

exports[`Storyshots Design System/Radio Radio showcase 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  color: #8833FF;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-3 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.75rem #b7c3d8;
  position: absolute;
}

.emotion-5 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.emotion-9 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  position: absolute;
}

.emotion-14 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem currentColor,inset 0px 0px 0px 0.25rem #fefefe,inset 0px 0px 0px 0.75rem currentColor;
  position: absolute;
}

.emotion-16 {
  position: relative;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  color: #8833FF;
  border: 0;
  opacity: 0.5;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-19 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.75rem #c3cddf;
  position: absolute;
}

.emotion-24 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem #c3cddf;
  position: absolute;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <span
      className="emotion-1"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="emotion-2"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="a"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-4"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
    <span
      className="emotion-1"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="emotion-2"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="b"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-9"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
    <span
      className="emotion-1"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="emotion-2"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="c"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-14"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
    <span
      className="emotion-16"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="emotion-2"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="d"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-19"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
    <span
      className="emotion-16"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="emotion-2"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="e"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-24"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
    <span
      className="emotion-16"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="emotion-2"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="g"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-14"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Selected Radio 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  border-radius: 50%;
  width: 3rem;
  height: 3rem;
  color: #8833FF;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-3 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  box-shadow: inset 0px 0px 0px 0.125rem currentColor,inset 0px 0px 0px 0.25rem #fefefe,inset 0px 0px 0px 0.75rem currentColor;
  position: absolute;
}

.emotion-5 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <span
    className="emotion-1"
    data-testid="radio-input"
  >
    <input
      checked={true}
      className="emotion-2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      required={false}
      type="radio"
      value="on"
    />
    <span
      className="emotion-3"
    >
      <span
        className="emotion-4"
      />
      <span
        className="emotion-5"
      />
    </span>
  </span>
</div>
`;
